# exch_observer

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
.github/actions/build-setup/: action.yaml
.github/workflows/: rust.yaml  rust.yml
contrib/: default_config.toml
contrib/known_tokens/: huobi.json  kraken.json
docker/: Dockerfile
docker/config/: binance_tokens.csv  default.toml  huobi_tokens.csv  kraken_tokens.csv
exch_apis/: Cargo.toml
exch_apis/src/: common.rs  huobi_ws.rs  kraken_ws.rs  lib.rs  websockets.rs
exch_cli/: Cargo.toml
exch_cli/src/: cli.rs  lib.rs  main.rs
exch_clients/: Cargo.toml
exch_clients/src/: binance_client.rs  combined_client.rs  config.rs  huobi_client.rs  kraken_client.rs  lib.rs
exch_observer/: Cargo.toml
exch_observer/src/: lib.rs  runner.rs
exch_observer_config/: Cargo.toml
exch_observer_config/src/: lib.rs
exch_observer_config/tests/: test_parsing.rs
exch_observer_config/tests/assets/: binance_symbols.csv  valid_config.toml
exch_observer_dbg/: Cargo.toml
exch_observer_dbg/src/: cli.rs  lib.rs  main.rs  scanner.rs  symbols_parser.rs  types.rs  utils.rs
exch_observer_derive/: Cargo.toml
exch_observer_derive/src/: lib.rs
exch_observer_rpc/: Cargo.toml  build.rs
exch_observer_rpc/proto/: observer.proto
exch_observer_rpc/src/: runner.rs
exch_observer_rpc/src/myproto/: exch_observer_rpc.rs
exch_observer_types/: Cargo.toml
exch_observer_types/src/: lib.rs  types.rs  utils.rs
exch_observer_types/src/exchanges/: huobi.rs  mod.rs
exch_observer_types/tests/: test_types.rs
exch_observer_utils/: Cargo.toml
exch_observer_utils/src/: lib.rs
exch_observer_ws/: Cargo.toml
exch_observer_ws/src/: client.rs  lib.rs
exch_subobservers/: Cargo.toml
exch_subobservers/src/: binance_obs.rs  combined_obs.rs  error.rs  huobi_obs.rs  internal.rs  kraken_obs.rs  lib.rs  mocker_obs.rs  ws_remote_obs.rs
exch_subobservers/tests/: mocker_test.rs
