[workspace]
resolver = "1"
members = [
  "exch_observer",
  "exch_observer_types",
  "exch_subobservers",
  "exch_observer_config",
  "exch_observer_utils",
  "exch_observer_derive",
  "exch_observer_rpc",
  "exch_observer_ws",
  "exch_observer_dbg",
  "exch_clients",
  "exch_apis",
  "exch_cli"
]

[workspace.package]
version = "0.0.1"
authors = ["theonekeyg@gmail.com"]
homepage = "https://github.com/theonekeyg"
edition = "2021"

[workspace.dependencies]
rand = "0.8.5"
anyhow = "1.0.72"
base64 = "0.21.2"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
dashmap = "5.5.0"
csv = "1.2.1"
dotenvy = "0.15.6"
env_logger = "0.10.0"
exch_apis = { path = "exch_apis" }
exch_clients = { path = "exch_clients" }
exch_observer = { path = "exch_observer" }
exch_observer_config = { path = "exch_observer_config" }
exch_observer_dbg = { path = "exch_observer_dbg" }
exch_observer_derive = { path = "exch_observer_derive" }
exch_observer_rpc = { path = "exch_observer_rpc" }
exch_observer_ws = { path = "exch_observer_ws" }
exch_observer_types = { path = "exch_observer_types" }
exch_observer_utils = { path = "exch_observer_utils" }
exch_subobservers = { path = "exch_subobservers" }
hmac = "0.12.1"
krakenrs = { git = "https://github.com/theonekeyg/krakenrs" }
lazy_static = "1.4.0"
libflate = "1.3.0"
log = "0.4.17"
prost = "0.11.8"
regex = "1.8.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
rust_decimal = "1.29.1"
rust_decimal_macros = "1.29.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = [] }
sha2 = "0.10.7"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
tonic = "0.9.1"
tonic-build = "0.9.1"
tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.2.2"
