[package]
name = "exch_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
exch_observer_rpc = { workspace = true }
exch_observer_config = { workspace = true }
exch_observer = { workspace = true }
exch_clients = { workspace = true }
binance = { workspace = true }
