[package]
name = "exch_clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { workspace = true }
krakenrs = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
exch_observer_config = { workspace = true }
exch_observer_types = { workspace = true }
