[package]
name = "exch_clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { workspace = true }
chrono = { workspace = true }
exch_observer_config = { workspace = true }
exch_observer_types = { workspace = true }
hmac = { workspace = true }
krakenrs = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
