[package]
name = "exch_observer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
binance = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
exch_observer_types = { workspace = true }
exch_observer_config = { workspace = true }
exch_subobservers = { workspace = true }
exch_clients = { workspace = true }
exch_observer_rpc = { workspace = true }
exch_observer_ws = { workspace = true }
