[package]
name = "exch_observer_dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exch_observer_types = { workspace = true }
exch_observer_rpc = { workspace = true }
exch_observer_config = { workspace = true }
exch_observer_utils = { workspace = true }
exch_clients = { workspace = true }

clap = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rust_decimal = { workspace = true }
