[package]
name = "exch_observer_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.1"
prost = "0.11.8"
exch_observer_types = { workspace = true }
exch_observer_config = { workspace = true }
exch_observer = { workspace = true }

[build-dependencies]
tonic-build = "0.9.1"
