[package]
name = "exch_observer_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
exch_observer_types = { workspace = true }
exch_observer_config = { workspace = true }
exch_subobservers = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
