[package]
name = "exch_observer_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
krakenrs = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
exch_observer_utils = { workspace = true }
