[package]
name = "exch_observer_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exch_subobservers = { workspace = true }
exch_observer_types = { workspace = true }
exch_observer_config = { workspace = true }
