[package]
name = "exch_subobservers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
binance = { workspace = true }
csv = { workspace = true }
dashmap = { workspace = true }
env_logger = { workspace = true }
exch_apis = { workspace = true }
exch_clients = { workspace = true }
exch_observer_config = { workspace = true }
exch_observer_derive = { workspace = true }
exch_observer_types = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tungstenite = { workspace = true }
